@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10937] "IndexeerXSEM og NormalizeDocument bruger PTIJobsMap"
    - bug [11042] "Bruger vi PluginID til noget?"
    - bug [11053] "properties/konfigurationsværdier der læses fra DatadockMain skal checkes"
    - bug [11036] "Bliver ESHarvesterCleanup brugt længere?"
